# dfx-indicators-etl

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DOCS.md  Dockerfile  Makefile  Makefile.uv  OLD_README.md  Pipfile  README.md  docker-compose.yml  entrypoint.sh  indicators.md  main.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_feature.yml  refactoring.yml
.github/workflows/: docker-image.yml  flake8-linting.yml
dfpp/: __init__.py  __main-old__.py  __main__.py  aggregation.py  azblob.py  backup.py  backup_pipeline.py  cli.py  cli_utils.py  common.py  constants.py  data_models.py  db.py  dfpp_exceptions.py  download.py  eda.py  exceptions.py  exceptions_logger.py  geo_utils.py  migrations.py  preprocessing.py  publish.py  publish_new.py  publishpg.py  run_transform.py  storage.py  transform_functions.py  utils.py
dfpp/migration/: country_group_json_to_cfg.py  local_helper_scripts.py  source_cfg_validate.py  source_csv_to_cfg.py  upload_cfgs.py
dfpp/publishing/: __init__.py  publish.py  publish_new.py  publishpg.py  (+1 more)
notebooks/: bulk_ilo_org.ipynb  database.ipynb  energydata_info.ipynb  etl.ipynb  ghoapi_azureedge_net.ipynb  healthdata_org.ipynb  ilo_org.ipynb  ilo_org_bulk.ipynb  imf_api.ipynb  imf_org.ipynb  indicators_api.ipynb  rplumber_ilo_org.ipynb  sdmx_unicef_org.ipynb  sipri_org.ipynb  unaids_org.ipynb  unicef_org.ipynb  unstats_un_org.ipynb  who_int.ipynb  world_bank.ipynb  worldbank_org.ipynb
tests/: conftest.py  test_storage_azure.py
(+184 files in other folders)
