[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dfx-etl"
description = "An ETL pipeline to collect and process indicator data for the Data Futures Exchange (DFx) at UNDP."
dynamic = ["dependencies", "optional-dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements_dev.txt"] }
version = { attr = "dfx_etl.__init__.__version__" }

[tool.setuptools.package-data]
"dfx_etl.data" = ["*.csv"]
